Eta- expansion done!

--- a/tests/task-2/Makefile
+++ b/tests/task-2/Makefile
@@ -1,6 +1,6 @@
 .PHONY: all clean
 
-JOUJOU=../../joujou --typecheck
+JOUJOU=../../joujou --typecheck-eta
 
 GOODS = $(wildcard *-good.j)
 BADS  = $(wildcard *-bad.j)
