on rajoute .j0 dans task 5

--- a/tests/task-5/Makefile
+++ b/tests/task-5/Makefile
@@ -4,7 +4,7 @@ JOUJOU=../../joujou
 
 all:
 	cp ../../category.ml .
-	cp ../../tiny_mlp.j .
+	cp ../../tiny_mlp.j0 .
 	cp ../../tiny_mlp_test.ml .
 	./test.sh tiny_mlp
 
